# LADEL

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: documentation.yml  tests.yml
Coverage/: index-sort-f.html  index-sort-l.html  index.html  shield.io.coverage.json
Coverage/LADEL/src/: index-detail-sort-f.html  index-detail-sort-l.html  index-detail.html  index-sort-f.html  index-sort-l.html  index.html  ladel.c.func-sort-c.html  ladel.c.func.html  ladel.c.gcov.html  ladel_add.c.func-sort-c.html  ladel_add.c.func.html  ladel_add.c.gcov.html  ladel_col_counts.c.func-sort-c.html  ladel_col_counts.c.func.html  ladel_col_counts.c.gcov.html  ladel_copy.c.func-sort-c.html  ladel_copy.c.func.html  ladel_copy.c.gcov.html  ladel_debug_print.c.func-sort-c.html  ladel_debug_print.c.func.html  ladel_debug_print.c.gcov.html  ladel_etree.c.func-sort-c.html  ladel_etree.c.func.html  ladel_etree.c.gcov.html  ladel_global.c.func-sort-c.html  ladel_global.c.func.html  ladel_global.c.gcov.html  ladel_ldl_numeric.c.func-sort-c.html  ladel_ldl_numeric.c.func.html  ladel_ldl_numeric.c.gcov.html  ladel_ldl_symbolic.c.func-sort-c.html  ladel_ldl_symbolic.c.func.html  ladel_ldl_symbolic.c.gcov.html  ladel_matmat.c.func-sort-c.html  ladel_matmat.c.func.html  ladel_matmat.c.gcov.html  ladel_matvec.c.func-sort-c.html  ladel_matvec.c.func.html  ladel_matvec.c.gcov.html  ladel_pattern.c.func-sort-c.html  (+26 more)
Doxygen/: annotated.html  classes.html  dir_000004_000003.html  dir_09ce2d5a5a5400dee48ae7d0c292cfc2.html  dir_3e0108bebbfd4102d33bcd5a6bef0bc4.html  dir_455f257f4be5a83bc3c7dd74d64c9b80.html  dir_455f257f4be5a83bc3c7dd74d64c9b80_dep.map  dir_455f257f4be5a83bc3c7dd74d64c9b80_dep.md5  dir_4e8d938e9ddb5a617c200d5739d1f41a.html  dir_c9645240015cbf90ad929dd972385805.html  dir_c9645240015cbf90ad929dd972385805_dep.map  dir_c9645240015cbf90ad929dd972385805_dep.md5  files.html  functions.html  functions_vars.html  globals.html  globals_c.html  globals_d.html  globals_defs.html  globals_f.html  globals_func.html  globals_g.html  globals_i.html  globals_l.html  globals_m.html  globals_n.html  globals_p.html  globals_r.html  globals_s.html  globals_t.html  globals_type.html  globals_u.html  graph_legend.html  group__grp-constants.html  group__grp-macros.html  group__grp-solver.html  group__grp-solver_ga113fd8ef702d93bd92314bd4bc118f24_cgraph.map  group__grp-solver_ga113fd8ef702d93bd92314bd4bc118f24_cgraph.md5  group__grp-solver_ga129ea878837012c6ac76fb6046bc9449_cgraph.map  group__grp-solver_ga129ea878837012c6ac76fb6046bc9449_cgraph.md5  (+404 more)
Doxygen/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  files_1.js  functions_0.js  groups_0.js  groups_1.js  groups_2.js  pages_0.js  pages_1.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  typedefs_3.js  typedefs_4.js  typedefs_5.js  variables_0.js  variables_1.js  variables_2.js  (+10 more)
LADEL/: CMakeLists.txt
LADEL/cmake/: Config.cmake.in  Install.cmake
LADEL/include/: ladel.h  ladel_constants.h  ladel_global.h  ladel_types.h
LADEL/mex/: CMakeLists.txt  ladel.m
LADEL/mex/demos/: ladel_test.m
LADEL/mex/src/: ladel_mex.c
LADEL/src/: ladel_copy.c  ladel_debug_print.c  ladel_global.c  ladel_ldl_symbolic.c
docs/: README.md
doxygen/: Doxyfile  custom_stylesheet.css
doxygen/doxypages/: installation.md  mainpage.dox
interfaces/mex/: ladel_setup.m
scripts/: coverage.sh
scripts/ci/: gen-docs.sh
test/: CMakeLists.txt
test/include/Minunit/: minunit.h
test/src/: test_add.cpp  test_col_counts.cpp  test_etree.cpp  test_ldl.cpp  test_matmat.cpp  test_matvec.cpp  test_permutation.cpp  test_postorder.cpp  test_print.cpp  test_rank1_mod.cpp  test_row_mod.cpp  test_scale.cpp  test_submatrix.cpp  test_transpose.cpp  test_upper_diag.cpp
